# audio_api

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  openapi.json  pyproject.toml
src/: config.py  main.py
src/api/: middleware.py  models.py  routes.py
src/api/routes/: audio.py  healthz.py
tests/: conftest.py  test_audio.py  test_healthz.py  test_middleware.py
