[tool.poetry]
name = "Audio API"
version = "0.1"
description = ""
authors = ["Inigo Allende"]

[tool.poetry.dependencies]
python = "^3.10.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
python-multipart = "^0.0.6"
pydantic-settings = "^2.1.0"
pydub = "^0.25.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
httpx = "^0.25.2"
pytest-asyncio = "^0.23.2"
pytest-mock = "^3.12.0"
pytest-dependency = "^0.5.1"

